--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 set -eEou pipefail
 
-IMAGE_NAME=ros-rolling
+IMAGE_NAME=deep-quintic
 DIRNAME=`dirname $0`
 
 # Build the docker image
